# govcookiecutter

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  LICENSE  Makefile  README.md  accessibility.html  cookiecutter.json  genindex.html  index.html  make.bat  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.doctrees/: CODE_OF_CONDUCT.doctree  (+4 more)
test_govcookiecutter/: .env  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  setup.cfg
test_govcookiecutter/docs/: README.md  conf.py
test_govcookiecutter/docs/aqa/: assumptions_caveats.md  data_log.md
test_govcookiecutter/docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  writing_sphinx_documentation.md
test_govcookiecutter/docs/user_guide/: README.md
test_govcookiecutter/src/test_govcookiecutter/: run_pipeline.py
test_govcookiecutter/tests/: test_example_module.py
{{ cookiecutter.repo_name }}/: .coveragerc  .env  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .lintr  .pre-commit-config.yaml  .secrets  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  Makefile  README.html  README.md  docs.html  dot_govcookiecutter.html  make.bat  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  source_code.html  startup.R  tests.html
{{ cookiecutter.repo_name }}/.github/workflows/: test_package_build.yml  tests.yml
{{ cookiecutter.repo_name }}/.gitlab/merge_request_templates/: {{ cookiecutter.project_name }}.md
{{ cookiecutter.repo_name }}/.govcookiecutter/: manifest.json
{{ cookiecutter.repo_name }}/.govcookiecutter/department_frameworks/: README.md
{{ cookiecutter.repo_name }}/.govcookiecutter/organisational_frameworks/: README.html  README.md
{{ cookiecutter.repo_name }}/.govcookiecutter/organisational_frameworks/GDS/: request_template.md
{{ cookiecutter.repo_name }}/data/: README.md
{{ cookiecutter.repo_name }}/data/raw/: README.md
{{ cookiecutter.repo_name }}/docs/: Makefile  README.md  accessibility.md  conf.py  index.md  index.rst
{{ cookiecutter.repo_name }}/docs/aqa/: README.md  aqa_plan.md  assumptions_caveats.md  data_log.md
{{ cookiecutter.repo_name }}/docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pre_commit_hooks.html  pre_commit_hooks.md  updating_gitignore.html  updating_gitignore.md  writing_accessible_documentation.html  writing_accessible_documentation.md  writing_sphinx_documentation.html  writing_sphinx_documentation.md
{{ cookiecutter.repo_name }}/docs/pull_merge_request_templates/: GDS.md
{{ cookiecutter.repo_name }}/docs/reference/: README.md  make_data.md  make_features.md  make_models.md  make_visualisations.md  src.md  utils.md
{{ cookiecutter.repo_name }}/docs/structure/: README.md  data.md  docs.md  notebooks.md  outputs.md  src.md  {{ cookiecutter.repo_name }}.md
{{ cookiecutter.repo_name }}/docs/user_guide/: README.md  loading_environment_variables.md  using_pytest.md
{{ cookiecutter.repo_name }}/inst/: WORDLIST
{{ cookiecutter.repo_name }}/notebooks/: README.md
{{ cookiecutter.repo_name }}/outputs/: README.md
{{ cookiecutter.repo_name }}/renv/: activate.R
{{ cookiecutter.repo_name }}/src/: README.md
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name.lower().replace(' ', '_').replace('-', '_') }}/: run_pipeline.py
{{ cookiecutter.repo_name }}/tests/: README.md  repo_tests_README.md  test_example_module.py
{{ cookiecutter.repo_name }}/tests/test_example_module/: test_hello_world.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/src/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name.lower().replace(' ', '_').replace('-', '_') }}/: example_config.yml  run_pipeline.py
(+198 files in other folders)
