[metadata]
name = test_govcookiecutter
description = Brief overview of your project.
version = 0.0.1
author = ONS
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    test_govcookiecutter
install_requires =
    pyyaml
python_requires = >=3.6
package_dir =
    =./src
zip_safe = no

[options.extras_require]
dev =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    detect-secrets
    python-dotenv
    Sphinx
    toml
