[metadata]
name = {{ cookiecutter.repo_name }}
description = {{ cookiecutter.overview }}
version = {{ cookiecutter.project_version }}
author = {{ cookiecutter.organisation_handle }}
platforms = win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    {{ cookiecutter.repo_name.lower().replace(' ', '_').replace('-', '_') }}
install_requires =
    pyyaml
python_requires = >=3.6
zip_safe = no

[options.extras_require]
dev =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    detect-secrets
    python-dotenv
    Sphinx
    toml
