[metadata]
name = {{ cookiecutter.repo_name.lower().replace(" ","-").replace("_","-") }}
description = {{ cookiecutter.overview }}
version = {{ cookiecutter.project_version }}
author = {{ cookiecutter.organisation_handle }}
platforms = win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    {{ cookiecutter.repo_name.lower().replace(' ', '_').replace('-', '_') }}
python_requires = >=3.9
zip_safe = no
install_requires =
    pyyaml

[options.extras_require]
dev =
    coverage
    myst-parser
    pytest
    python-dotenv
    Sphinx
    toml 
